--- a/core/templates/core/partials/kpi_card.html
+++ b/core/templates/core/partials/kpi_card.html
@@ -5,16 +5,16 @@
         <h6 class="card-title {{ title_class }} mb-1">{{ title }}{% if info_tooltip %}
           <i class="fas fa-info-circle ms-1" data-bs-toggle="tooltip" title="{{ info_tooltip }}"></i>
         {% endif %}</h6>
-        <h4 class="card-text mb-0">{{ value }}</h4>
+        <h4 class="card-text mb-0"{% if value_id %} id="{{ value_id }}"{% endif %}>{{ value }}</h4>
         {% if subtitle %}<small class="text-muted">{{ subtitle }}</small>{% endif %}
       </div>
       {% if icon %}{{ icon|safe }}{% endif %}
     </div>
     <div class="progress mt-2" style="height: 4px">
-      <div class="progress-bar {{ progress_bar_class }}" style="width: {{ meter }}%"></div>
+      <div class="progress-bar {{ progress_bar_class }}"{% if progress_id %} id="{{ progress_id }}"{% endif %} style="width: {{ meter }}%"></div>
     </div>
     {% if footer %}
-    <small class="text-muted mt-1 d-block">
+    <small class="text-muted mt-1 d-block"{% if footer_id %} id="{{ footer_id }}"{% endif %}>
       {% if footer_badge_class %}<span class="{{ footer_badge_class }}">{{ footer }}</span>{% else %}{{ footer }}{% endif %}
     </small>
     {% endif %}
