Simplify returns chart and endpoint

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -295,6 +295,7 @@ Dashboard{% endblock %} {% block extra_head %}
         </div>
         <div class="card-body chart-container">
           <canvas id="evolution-chart"></canvas>
+          <canvas id="returns-chart" style="display: none;"></canvas>
         </div>
       </div>
     </div>
