--- a/accounts/templates/accounts/password_reset.html
+++ b/accounts/templates/accounts/password_reset.html
@@ -1,4 +1,5 @@
 
+{% load widget_tweaks %}
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
@@ -21,7 +22,7 @@
               {% csrf_token %}
               <div class="mb-3">
                 <label for="{{ form.email.id_for_label }}" class="form-label">Email address</label>
-                {{ form.email }}
+                {{ form.email|add_class:"form-control"|attr:"autocomplete:email" }}
                 {% if form.email.errors %}
                   <div class="text-danger small">{{ form.email.errors }}</div>
                 {% endif %}
