--- a/accounts/templates/accounts/password_reset_confirm.html
+++ b/accounts/templates/accounts/password_reset_confirm.html
@@ -1,4 +1,5 @@
 
+{% load widget_tweaks %}
 <!doctype html>
 <html lang="en-GB">
 <head>
@@ -26,7 +27,7 @@
 
                 <div class="mb-3">
                   <label for="id_new_password1" class="form-label">New password</label>
-                  {{ form.new_password1 }}
+                  {{ form.new_password1|add_class:"form-control"|attr:"autocomplete:new-password"|attr:"autocapitalize:off"|attr:"spellcheck:false" }}
                   {% if form.new_password1.errors %}
                     <div class="text-danger small">{{ form.new_password1.errors }}</div>
                   {% endif %}
@@ -34,7 +35,7 @@
 
                 <div class="mb-3">
                   <label for="id_new_password2" class="form-label">Confirm new password</label>
-                  {{ form.new_password2 }}
+                  {{ form.new_password2|add_class:"form-control"|attr:"autocomplete:new-password"|attr:"autocapitalize:off"|attr:"spellcheck:false" }}
                   {% if form.new_password2.errors %}
                     <div class="text-danger small">{{ form.new_password2.errors }}</div>
                   {% endif %}
