--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -340,7 +340,15 @@
           <div class="mb-3">
             <label for="deletePassword" class="form-label">Password</label>
             <div class="input-group">
-              <input type="password" class="form-control" id="deletePassword" name="password" required>
+              <input
+                type="password"
+                class="form-control"
+                id="deletePassword"
+                name="password"
+                autocomplete="current-password"
+                required
+                autocapitalize="off"
+                spellcheck="false">
               <button class="btn btn-outline-secondary" type="button" id="togglePassword"><i class="bi bi-eye"></i></button>
             </div>
           </div>
