--- a/core/templates/core/transaction_list_v2.html
+++ b/core/templates/core/transaction_list_v2.html
@@ -235,7 +235,7 @@
               </div>
             </div>
             <div class="text-end">
-              <p class="card-category mb-0">Balance</p>
+              <p class="card-category mb-0">Net Balance</p>
               <h3 class="card-value" id="total-balance">€ 0.00</h3>
             </div>
           </div>
