Add CSP coverage tests

--- a/core/templates/core/import_balances_form.html
+++ b/core/templates/core/import_balances_form.html
@@ -43,9 +43,9 @@
           <div class="spinner-border spinner-border-sm me-2" role="status"></div>
           <span>Processing import... This may take a moment for large files.</span>
         </div>
-        <div class="progress mt-2" style="height: 20px;">
-          <div class="progress-bar progress-bar-striped progress-bar-animated" 
-               role="progressbar" style="width: 0%" id="progress-bar">
+        <div class="progress mt-2 h-20">
+          <div class="progress-bar progress-bar-striped progress-bar-animated w-0"
+               role="progressbar" id="progress-bar">
             <span id="progress-text">0%</span>
           </div>
         </div>
