--- a/core/templates/core/transaction_form.html
+++ b/core/templates/core/transaction_form.html
@@ -79,7 +79,7 @@
         </div>
 
         <!-- INVESTMENT FLOW -->
-        <div class="mb-3" id="investment-flow" style="display:none;">
+        <div class="mb-3 d-none" id="investment-flow">
           <label class="form-label">Investment Flow</label>
           <div class="btn-group w-100" role="group">
             <input type="radio" class="btn-check" name="direction" id="dir_in" value="IN"
