--- a/core/templates/core/import_form.html
+++ b/core/templates/core/import_form.html
@@ -63,9 +63,9 @@
             <i class="fas fa-upload me-2"></i>
             Import Progress
           </h6>
-          <div class="progress mb-3" style="height: 25px;">
-            <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" 
-                 role="progressbar" style="width: 0%" id="progress-bar">
+          <div class="progress mb-3 h-25">
+            <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary w-0"
+                 role="progressbar" id="progress-bar">
               <span id="progress-text" class="fw-bold">0%</span>
             </div>
           </div>
