--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -182,6 +182,9 @@
             color: #24282C !important;
         }
     </style>
+    <script nonce="{{ request.csp_nonce }}">
+      window.CSP_NONCE = "{{ request.csp_nonce }}";
+    </script>
 </head>
 <body class="bg-light">
 
