--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -1009,7 +1009,7 @@ Dashboard{% endblock %} {% block extra_head %}
         </div>
         <div class="card-body chart-container">
           <canvas id="evolution-chart"></canvas>
-          <canvas id="returns-chart" class="d-none"></canvas>
+          <canvas id="returns-chart"></canvas>
         </div>
       </div>
     </div>
