--- a/core/templates/core/account_list.html
+++ b/core/templates/core/account_list.html
@@ -175,7 +175,7 @@
 </div>
 
 <!-- JS: Sortable + Reorder script -->
-<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
-<script src="{% static 'js/drag_reorder.js' %}" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js" nonce="{{ request.csp_nonce }}"></script>
+<script src="{% static 'js/drag_reorder.js' %}" defer nonce="{{ request.csp_nonce }}"></script>
 
 {% endblock %}
