--- a/core/templates/core/import_balances_form.html
+++ b/core/templates/core/import_balances_form.html
@@ -115,5 +115,5 @@
 </div>
 
 <!-- Bootstrap JS (for alerts) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer nonce="{{ request.csp_nonce }}"></script>
 {% endblock %}
