--- a/core/templates/core/transaction_form.html
+++ b/core/templates/core/transaction_form.html
@@ -146,7 +146,7 @@
 <!-- Flatpickr + Tom Select -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tom-select/dist/css/tom-select.css">
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-<script src="https://cdn.jsdelivr.net/npm/tom-select/dist/js/tom-select.complete.min.js"></script>
-<script src="{% static 'js/transaction_form.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr" nonce="{{ request.csp_nonce }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/tom-select/dist/js/tom-select.complete.min.js" nonce="{{ request.csp_nonce }}"></script>
+<script src="{% static 'js/transaction_form.js' %}" nonce="{{ request.csp_nonce }}"></script>
 {% endblock %}
