Add pre-login headers

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -4,4 +4,6 @@
 
 {% block content %}
 {% include "core/partials/lazy_instructions.html" %}
+{% include "core/partials/contact.html" %}
+{% include "core/partials/login_prompt.html" %}
 {% endblock %}
